save traces and config

--- a/conf/jmodeltest.conf
+++ b/conf/jmodeltest.conf
@@ -17,7 +17,7 @@
 #    e.g., ${HOME} or ${PWD}                             #
 ##########################################################
 #checkpointing  = enabled
-html-logging   = enabled
+html-logging   = disabled
 phyml-logging  = enabled
 log-dir        = log
 
