revert back to phyml default location

--- a/conf/jmodeltest.conf
+++ b/conf/jmodeltest.conf
@@ -42,7 +42,7 @@ log-dir        = log
 #                                                        #
 ##########################################################
 global-phyml-exe    = false
-exe-dir             = ${HOME}/dev/phyml-3.3.20180621
+exe-dir             = exe/phyml
 
 ##########################################################
 #                                                        #
