--- a/build.xml
+++ b/build.xml
@@ -3,10 +3,10 @@
 
 	<property name="src.dir" location="src/main/java" />
 	<property name="build.base.dir" location="build" />
-  <property name="build.dir" location="${build.base.dir}/classes" />
+	<property name="build.dir" location="${build.base.dir}/classes" />
 	<property name="lib.dir" location="lib" />
 	<property name="dist.dir" location="dist" />
-  <property name="exe.dir" location="${dist.dir}/exe/phyml" />
+	<property name="exe.dir" location="${dist.dir}/exe/phyml" />
 	<property name="log.dir" location="${dist.dir}/log" />
 	<property name="manual.dir" location="manual" />
 	<property name="src.resources.dir" location="src/main/resources" />
@@ -33,10 +33,8 @@
 		<mkdir dir="${lib.dir}" />
 		<property environment="env" />
 		<property name="java6.boot.classpath" value="${env.JAVA6_BOOTCLASSES}" />
-		<javac srcdir="${src.dir}" destdir="${build.dir}" includeAntRuntime="no" 
-			target="1.6" source="1.6" bootclasspath="${java5.boot.classpath}"
-			classpathref="lib.path" debug="${compile.debug}">
-			<compilerarg value="-Xlint:all"/>
+		<javac srcdir="${src.dir}" destdir="${build.dir}" includeAntRuntime="no" target="1.6" source="1.6" bootclasspath="${java5.boot.classpath}" classpathref="lib.path" debug="${compile.debug}">
+			<compilerarg value="-Xlint:all" />
 		</javac>
 	</target>
 
